# oco

./: .gitignore  CMakeLists.txt  README.rst
config/: CMakeLists.txt  README  aerosol_met.py  base_config.py  log_h2o_example_retrieval.py  oco_config.py  oco_eof.h5  oco_solar_model.h5  requirements.txt  ret_example_config.py  retrieval_config.py  retrieval_covariance.h5  rtr_comparison_aerosols.py  rtr_comparison_base.py  rtr_comparison_clear.py  simulation.py  simulation_config.py  simulation_file.py  static_input.h5
lib/: CMakeLists.txt  aerosol_met_prior.cc  aerosol_met_prior.h  hdf_sounding_id.h  level_1b_hdf.h  level_1b_oco.cc  level_1b_oco.h  oco_met_file.cc  oco_met_file.h  oco_noise_model.h  oco_sounding_id.cc  oco_sounding_id.h
notebooks/: aerosol_profile_example.ipynb  level1b_director_test.py  load_example_config.ipynb  log_h2o_retrieval.ipynb  run_example_retrieval.ipynb  run_example_rt.ipynb  run_example_simulation.ipynb  run_test.py  test_l1b_director.ipynb
python/: CMakeLists.txt  __init__.py  aerosol_met_prior.i  hdf_sounding_id.i  interface_deps.sh  level_1b_hdf.i  level_1b_oco.i  oco.i  oco_met_file.i  oco_noise_model.i  oco_sounding_id.i
script/: setup_oco_env.sh.in  setup_template_env.sh.in
test/: CMakeLists.txt  global_fixture.cc  global_fixture.h  global_fixture_default.cc.in  level_1b_oco_test.cc  oco_noise_model_test.cc  oco_sounding_id_test.cc  pytest_wrap.sh.in  run_rf_wrap.sh.in  test_all.cc
test/expected/rtr_comparison/: rtr_expected_radiances_aerosols.h5  rtr_expected_radiances_clear.h5
test/in/: README  oco2_ECMWFTG_06779a_151010_B8000r_170703073334-selected_ids.h5  oco2_L1bScND_16094a_170711_B7302r_171102090317-selected_ids.h5  oco2_L1bScND_80008a_111017225030d_spliced.h5  oco2_L1bScTG_06779a_151010_B8000r_170717081341-selected_ids.h5  oco2_L2DiaTG_06779a_151010_B8100r_170730115815-selected_ids.h5  oco2_L2MetND_16094a_170711_B8000r_171017214714-selected_ids.h5  oco_L1bSun03CO2ND_91605a_081028154658t_spliced.hdf
test/python/: test_rtr_comparison.py
util/: create_simulation_file.py  simulate.py  simulate_for_sounding.py
